--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -1,4 +1,5 @@
 <canvas id="line-chart" width="800" height="450"></canvas>
+<script type="text/javascript" src="http://www.chartjs.org/assets/Chart.js"></script>
 <script>
 var ctx = document.getElementById("line-chart").getContext('2d');
 var myChart = new Chart(ctx, {
