--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -4,10 +4,7 @@
   <script type="text/javascript" src="http://www.chartjs.org/assets/Chart.js"></script>
 </head>
 <body>
-
 <h1>Green Monitoring</h1>
-
-<p>My first paragraph.</p>
-
+<script src='graph.js'></script>
 </body>
 </html>
