--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <h1>Green Monitoring</h1>
-<script src='graph.js'></script>
+<script src='/static/graph.js'></script>
 </body>
 </html>
