--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h1>Green Monitoring</h1>
-<script src='/static/graph.js'></script>
+<script type="text/javascript" src='/static/graph.js'></script>
 </body>
 </html>
