--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -4,6 +4,10 @@
 </head>
 <body>
 <h1>Green Monitoring</h1>
+  
+  <div style="width:800;text-align:center">
+    <canvas id="line-chart" width="100%"></canvas>
+  </div>
 <script type="text/javascript" src='/static/graph.js'></script>
 </body>
 </html>
