--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -4,7 +4,13 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 </head>
 <body>
-<h1>Green Monitoring</h1>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-12" style="background-color:#222;height:auto;min-height:60px;padding:10px 5px;">
+      <h1 style="color:white;">Green Monitoring</h1>
+    </div>
+  </div>
+</div>
   
   <div style="width:800;text-align:center">
     <canvas id="line-chart" width="100%"></canvas>
