--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -11,10 +11,61 @@
     </div>
   </div>
 </div>
+
+<div class="container-fluid">
   
-  <div style="width:800;text-align:center">
-    <canvas id="line-chart" width="100%"></canvas>
+  
+  <div class="row" style="padding:10px 5px;height:auto;min-height:60px;max-height:300px;">
+      <div class="col-md-1" ></div>
+      
+      <div class="col-md-2" style="background-color:#3e95cd;text-align:center;">
+        <h2 style="color:white;">Water</h2>
+      </div>
+      
+      <div class="col-md-8" style="text-align:center;">
+        <canvas id="line-chart-water" width="100%" height="15%"></canvas>
+      </div>
+      
+      <div class="col-md-1" ></div>
   </div>
+  
+  <div class="row" style="padding:10px 5px;">
+      <div class="col-md-1" ></div>
+      
+      <div class="col-md-2" style="background-color:#3e95cd";"></div>
+      
+      <div class="row" style="padding:10px 5px;height:auto;min-height:60px;max-height:300px;">
+        <canvas id="line-chart-light" width="100%" height="15%"></canvas>
+      </div>
+      
+      <div class="col-md-1" ></div>
+  </div>
+  
+ <div class="row" style="padding:10px 5px;">
+      <div class="col-md-1" ></div>
+      
+      <div class="col-md-2" style="background-color:#3e95cd";"></div>
+      
+      <div class="row" style="padding:10px 5px;height:auto;min-height:60px;max-height:300px;">
+        <canvas id="line-chart-gaz" width="100%" height="15%"></canvas>
+      </div>
+      
+      <div class="col-md-1" ></div>
+  </div>
+  
+  <div class="row" style="padding:10px 5px;">
+      <div class="col-md-1" ></div>
+      
+      <div class="col-md-2" style="background-color:#3e95cd";"></div>
+      
+      <div class="row" style="padding:10px 5px;height:auto;min-height:60px;max-height:300px;">
+        <canvas id="line-chart-temperature" width="100%" height="15%"></canvas>
+      </div>
+      
+      <div class="col-md-1" ></div>
+  </div>
+</div>
+  
 <script type="text/javascript" src='/static/graph.js'></script>
 </body>
 </html>
