final version of webapp

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -20,7 +20,8 @@
       <div class="col-md-1" ></div>
       
       <div class="col-md-2" style="background-color:#3e95cd;text-align:center;">
-        <h2 style="color:white;">Water</h2>
+        <h2 style="color:white;padding:10px;">MOISTURE</h2>
+        <h2 id="moisture-value" style="color:white;padding:20px;font-size: 40px;">0.0%</h2>
       </div>
       
       <div class="col-md-8" style="text-align:center;">
@@ -33,8 +34,9 @@
   <div class="row" style="padding:10px 5px;">
       <div class="col-md-1" ></div>
       
-      <div class="col-md-2" style="background-color:#3e95cd;">
-        <h2 style="color:white;">Light</h2>
+      <div class="col-md-2" style="background-color:#FFA500;text-align:center;">
+        <h2 style="color:white;padding:10px;">LIGHT</h2>
+        <h2 id="light-value" style="color:white;padding:20px;font-size: 40px;">0.0 lx</h2>
       </div>
       
       <div class="col-md-8" style="text-align:center;">
@@ -47,7 +49,10 @@
  <div class="row" style="padding:10px 5px;">
       <div class="col-md-1" ></div>
       
-      <div class="col-md-2" style="background-color:#3e95cd;"></div>
+      <div class="col-md-2" style="background-color:#A30000;text-align:center;">
+        <h2 style="color:white;padding:10px;">TEMPERATURE</h2>
+        <h2 id="temp-value" style="color:white;padding:20px;font-size: 40px;">0.0°</h2>
+      </div>
       
       <div class="col-md-8" style="text-align:center;">
         <canvas id="line-chart-gaz" width="100%" height="15%"></canvas>
@@ -59,7 +64,10 @@
   <div class="row" style="padding:10px 5px;">
       <div class="col-md-1" ></div>
       
-      <div class="col-md-2" style="background-color:#3e95cd;"></div>
+      <div class="col-md-2" style="background-color:#00B259;text-align:center;">
+        <h2 style="color:white;padding:10px;">GAZ</h2>
+        <h2 id="carbon-value" style="color:white;padding:20px;font-size: 40px;">0.0%</h2>
+      </div>
       
       <div class="col-md-8" style="text-align:center;">
         <canvas id="line-chart-temperature" width="100%" height="15%"></canvas>
